--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 # Steps to run and test the app:
 
-1. Unzip the zip file. Go to the unzipped directory (fingerprinting_app).
+1. Clone the Github repository.
 
 2. Build the docker image.
-## docker build -t fingerprinting_app .
+## docker build -t device_fingerprinting .
 
 3. Run the docker container.
-## docker run -d -p 5000:5000 fingerprinting_app
+## docker run -d -p 5000:5000 device_fingerprinting
 
 4. Provide IP addresses of target devices to test the app in browser, for instance:
 ## http://localhost:5000/check_fingerprint?targets=www.google.com&targets=185.199.112.2
